# HardwareAbstractionIR

./: Cargo.toml  README.md  device.x  lib.rs
.github/skills/audit/: SKILL.md
.github/skills/bootstrap/: SKILL.md
.github/skills/evolve/: SKILL.md
.github/skills/extract/: SKILL.md
.github/skills/find-mcu-sources/: SKILL.md
.github/skills/maintain/: SKILL.md
.github/workflows/: generated-artifacts.yml  verify-generated-mcu.yml
docs/: canonical-terms.md  cli.md  embassy-hal-profile.md  mcu-profile.md  schema.md
evidence/espressif/esp32-c3fn4/: evidence-manifest.json  extraction-report.md  source-discovery.md
evidence/st/stm32f405rgt6/: evidence-manifest.json  extraction-report.md
evidence/texas-instruments/lm3s6965/: evidence-manifest.json  extraction-report.md  hair.json  source-discovery.md
evidence/texas-instruments/lm3s6965/embassy-out/: Cargo.toml
evidence/texas-instruments/lm3s6965/embassy-out/src/: gpio.rs  i2c.rs  interrupt.rs  lib.rs  (+6 more)
evidence/texas-instruments/lm3s6965/embassy-smoke/: Cargo.toml  build.rs  run-qemu-smoke.ps1
evidence/wch/ch32v203c8t6/: audit-report.md  evidence-manifest.json  extraction-report.md  hair.json  source-discovery.md
evidence/wch/ch32v203g6u6/: audit-report.md  evidence-manifest.json  extraction-report.md  hair.json  source-discovery.md
schema/: common.json  evidence-manifest.json  hair.json  normalization.json  physical.json  provenance.json  semantics.json  structure.json  validation.json
schema/profiles/: embassy-hal.json  mcu.json
specs/: design.md  requirements.md  validation.md
src/: main.rs
(+1 files in other folders)
