[package]
name = "hair"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
jsonschema = { version = "0.17", features = ["draft202012"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
xmlwriter = "0.1"

[dev-dependencies]
tempfile = "3.12"
